--- a/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -870,3 +870,10 @@ loading_direct_access=Loading message...
 error_direct_access=Error loading message
 
 recipient_placeholder=Click here to select recipients
+
+# NYU Customisations
+all_participants_desc=All Participants in this site
+participants_group_desc={0} Group in this site
+participants_role_desc={0} Role in this site
+pvt_send_as_email= When checked, a copy of this message will be sent to the recipients' NYUemail accounts for reference. Messages may only be exchanged within NYU Classes.
+pvt_send_cc=Email a copy
