--- a/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -868,3 +868,9 @@ cdfm_not_selected_topic=You have to select forum and topic where moving thread
 loading_direct_access=Loading message...
 error_direct_access=Error loading message
 
+# NYU Customisations
+all_participants_desc=All Participants in this site
+participants_group_desc={0} Group in this site
+participants_role_desc={0} Role in this site
+pvt_send_as_email= When checked, a copy of this message will be sent to the recipients' NYUemail accounts for reference. Messages may only be exchanged within NYU Classes.
+pvt_send_cc=Email a copy
