--- a/roster2/src/i18n/org/sakaiproject/roster/i18n/ui.properties
+++ b/roster2/src/i18n/org/sakaiproject/roster/i18n/ui.properties
@@ -102,3 +102,7 @@ permissions_photo = View participant's official photo
 permissions_visits = View participant's site visits
 permissions_export = Export roster
 permissions_user_properties= View participant's properties
+
+# NYU changes
+title_msg = To add or remove participants from the site, visit the Settings tool.
+title_msg_groups = To add or remove participants from groups, visit the Settings tool.
