CLASSES-1429 Rename Web Content to External Link

--- a/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -253,3 +253,7 @@ sakai.adminsiteperms.description=Allows adminstrators to control permissions for
 
 sakai.gradebookng.title=Gradebook
 sakai.gradebookng.description=The next generation gradebook tool for the Sakai CLE
+
+# NYU Customisations
+sakai.iframe.title                                  = External Link
+
