--- a/roster2/src/i18n/org/sakaiproject/roster/i18n/ui.properties
+++ b/roster2/src/i18n/org/sakaiproject/roster/i18n/ui.properties
@@ -106,7 +106,7 @@ permissions_photo = View participants' official photo
 permissions_visits = View participants' site visits
 permissions_export = Export roster
 
-# NYU changes
+# NYU Customisations
 title_msg = To add or remove participants from the site, visit the Settings tool.
 title_msg_groups = To add or remove participants from groups, visit the Settings tool.
 
