--- a/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/msgcntr/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -871,6 +871,6 @@ error_direct_access=Error loading message
 # NYU Customisations
 all_participants_desc=All Participants in this site
 participants_group_desc={0} Group in this site
-participants_role_desc={0} Role in this site
+participants_role_desc=All {0}s in this site
 pvt_send_as_email= When checked, a copy of this message will be sent to the recipients' NYUemail accounts for reference. Messages may only be exchanged within NYU Classes.
 pvt_send_cc=Email a copy
