--- a/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -281,3 +281,5 @@ sakai.preferences.title                             = My Preferences
 sakai.schedule.description                          = For posting and viewing deadlines, events, etc.
 sakai.schedule.title                                = Calendar
 
+sakai.iframe.site.title                             = Site Information
+
