--- a/commons/impl/src/i18n/org/sakaiproject/commons/impl/ui.properties
+++ b/commons/impl/src/i18n/org/sakaiproject/commons/impl/ui.properties
@@ -44,3 +44,6 @@ load_thumbnail = Load thumbnail
 link_button_tooltip = Insert a link
 image_button_tooltip = Insert an image
 choose_image_file = Choose an image file. It must be a png, gif, or a jpeg:
+edit_save = Update Options
+edit_title = Title:
+keyboard_support = <small><code><span class="mac-only">Cmd</span><span class="pc-only">CTRL</span> + Return</code> to Post</small>
